29-Nov-2012 - zeromus - fix "you ling xing dong" by assigning to mapper 192

---r2768 - FCEUX 2.2.0 Released---
---November 27 2012---

24-Nov-2012 - AnS - when the New PPU is on, it displays "(NewPPU)" in the window caption
20-Nov-2012 - AnS - Taseditor: added "Ungreenzone" item to context menu; added "Config->Enable Greenzoning"
13-Nov-2012 - AnS - Taseditor: changed fm3 format to version 3
10-Nov-2012 - AnS - win32 hotkeys mapping: added the condition that both commands must have the same EMUCMDFLAG_TASEDITOR, or else they are not considered conflicting
10-Nov-2012 - AnS - win32 hotkeys: disallow unwanted hits of e.g. F1 after pressing Shift+F1 and quickly releasing Shift
05-Nov-2012 - zeromus - support mapper 028
05-Nov-2012 - AnS - Taseditor: fixed lag adjustments when dealing with previously unknown lag state
30-Oct-2012 - zeromus - default stack pointer to $FD instead of $FF
29-Oct-2012 - CaH4e3 - mapper 252 added
29-Oct-2012 - AnS - Taseditor: update RAM Search and RAM Watch when jumping causes game state to change
21-Oct-2012 - CaH4e3 - sync mappers with fceu-mm
30-Sep-2012 - AnS - added "(Europe)" and "(PAL)" strings to region detection
28-Sep-2012 - AnS - Hexeditor: Ctrl+F opens Find dialog
28-Sep-2012 - AnS - Hexeditor: display 0x5000-0x5FFF contents
28-Sep-2012 - AnS - Tracer: fixed crash when logging undefined opcodes
26-Sep-2012 - AnS - Debugger: "Name" button in Bookmarks, total revamp of Bookmarks
26-Sep-2012 - AnS - Debugger: single click on any address copies this address to the "Seek To" field and "Bookmark Add" field
26-Sep-2012 - AnS - Fixed replay engine bug that doubles the last input of the movie
26-Sep-2012 - AnS - Tracer: "RTS" instructions now output the subroutine address/name
23-Sep-2012 - AnS - Lua: clear previous frame drawings at the beginning of every frame
23-Sep-2012 - AnS - Debugger: fixed mouseover when using Symbolic debug; mouseover works for the disassembly window too