@@ -840,9 +840,9 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Enter New Input"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    PUSHBUTTON      "Cancel",BTN_CANCEL,40,45,50,14
     CTEXT           "Press a key",LBL_KEY_COMBO,31,14,122,20
     PUSHBUTTON      "Clear",BTN_CLEAR,95,45,50,14
+    PUSHBUTTON      "OK",BTN_OK,40,45,50,14
 END
 
 PALCONFIG DIALOGEX 16, 81, 228, 116
